--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 .navbar-gradient {
-    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    background: linear-gradient(135deg, #85582C 0%, #996515 50%, #ba7b0b, #ca8606, #da9101);
 }
 
 .logo {
@@ -7,12 +7,32 @@
     font-weight: bold;
 }
 
+body {
+    background: linear-gradient(135deg, #85582C 0%, #996515 50%, #ba7b0b, #ca8606, #da9101);
+
+}
+
 .hero-1 {
     height: 100vh;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-        url('https://images.unsplash.com/photo-1519389950473-47ba0277781c?w=1920&h=1080&fit=crop');
+        url('https://images.unsplash.com/photo-1716719215097-a6a640fc3225?q=80&w=1201&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
 }
 
+.card {
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2);
+    background: linear-gradient(135deg, #e1760b, #da9f45 50%, #b67505, #ca8606, #875b03);
+    color: aliceblue;
+}
+
+.card-img-top {
+    height: 200px;
+    object-fit: cover;
+}
